--- a/.containerignore
+++ b/.containerignore
@@ -1,9 +1,9 @@
+# jujutsu folder
+.jj/
+
 # dotenv environment variable files
 .env
-.env.development.local
-.env.test.local
-.env.production.local
-.env.local
+.env.container
 
 # database files
 *.db3
