--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,10 @@
 # dotenv environment variable files
 .env
-.env.development.local
-.env.test.local
-.env.production.local
-.env.local
+.env.container
 
 # database files
 *.db3
+!empty.db3
 
 # Fresh build directory
 _fresh/
